--- a/INSTALL
+++ b/INSTALL
@@ -14,7 +14,9 @@ the docs, type
 
 make doc
 
-in the very same directory.
+in the very same directory. You will find the docs in the api-doc/ 
+directory. There are two formats available, for the more common HTML 
+version open the file api-doc/html/index.html .
 
 Installing for Cross-Compilation
 ================================
